binrw/tests/ui/repr_magic_conflict.stderr
error: `repr` and `magic` are mutually exclusive
 --> $DIR/repr_magic_conflict.rs:5:6
  |
5 |   #[br(repr = u8)]
  |  ______^
6 | | enum Foo {
7 | |     #[br(magic = 0u8)] A,
  | |______________^
